Added horizontal pod autoscaler for scaling
 - Scaling configured based on CPU/MEM utilization

--- a/.github/workflows/app-deployment.yaml
+++ b/.github/workflows/app-deployment.yaml
@@ -70,3 +70,4 @@ jobs:
           kubectl rollout status deployment/servian-app-db-migration
           kubectl apply -f app-server.yml
           kubectl apply -f service.yml
+          kubectl apply -f hpa.yml
