--- a/.github/workflows/tfsec.yaml
+++ b/.github/workflows/tfsec.yaml
@@ -9,24 +9,11 @@ on:
 
 jobs:
   tfsec:
-    name: tfsec report
+    name: tfsec
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+
     steps:
       - name: Clone repo
         uses: actions/checkout@master
-        with:
-          persist-credentials: false
-
       - name: tfsec
-        uses: aquasecurity/tfsec-sarif-action@v0.1.4
-        with:
-          sarif_file: tfsec.sarif          
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: tfsec.sarif   
+        uses: aquasecurity/tfsec-action@v1.0.2
