Added bump yaml

--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -17,6 +17,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
+    - name: print
+      run: |
+        echo ${{ steps.create_tag.outputs.new_tag }}
+        echo ${{ steps.create_tag.outputs.tag }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
